Fix jwt deprecation warnings, update readme file, fix sonar warnings